Fix issues in the maven build system

--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
   ~ URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
   ~
   ~ Copyright statement:
-  ~ --------------------
   ~ (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
   ~     http://www.semanticmetadata.net/lire, http://www.lire-project.net
   -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
