[Build] Get travis to deploy github artifacts to fake maven repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 jdk:
   - openjdk7
-  - openjdk6
-  - oraclejdk7
-  - oraclejdk6
 script:
-  ant package
+  mvn clean install deploy
+env:
+  global:
+    secure: "gLAqz//A74rVbpONBCvnoWyUKaTVlavby20Si1SrSJfaOyDt1lPBLOCwJdBzl5qDkNUMHeHV0p7M1B2Pp6WbtjparVF9XkFdgCeOPQfJ3jw59iCIGQuTTz60wOAHArXYoAO7ZNBb9lk4TrlVIqE4n1xh+jtrGqmYZpot52p/xtU="
