--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,51 @@ jdk:
   - openjdk7
 
 before_install:
-  #- sudo apt-get install -qq build-essential
+  - sudo apt-get install -qq build-essential checkinstall cmake pkg-config yasm
   - sudo apt-get install -qq libavformat-dev
-  - sudo apt-get install -qq ffmpeg
-  - sudo apt-get install -qq libopencv-dev
+  - sudo apt-get install -qq libtiff4-dev libjpeg-dev libjasper-dev libpng-dev
+  - sudo apt-get install -qq libtbb-dev
+  - sudo apt-get install -qq python-dev python-numpy
+
+  - mkdir /tmp/opencv-install
+  - pushd /tmp/opencv-install
+  - wget http://superb-dca2.dl.sourceforge.net/project/opencvlibrary/opencv-unix/2.4.6.1/opencv-2.4.6.1.tar.gz
+  - tar -xvf opencv-2.4.6.1.tar.gz
+  - pushd opencv-2.4.6.1
+  - mkdir build
+  - pushd build
+  - cmake \
+        -DCMAKE_INSTALL_PREFIX:PATH=/usr \
+        -DWITH_1394=OFF \
+        -DWITH_CUDA=OFF \
+        -DWITH_CUFFT=OFF \
+        -DWITH_CUBLAS=OFF \
+        -DWITH_NVCUVID=OFF \
+        -DWITH_GSTREAMER=OFF \
+        -DWITH_JASPER=ON \
+        -DWITH_JPEG=ON \
+        -DWITH_OPENEXR=ON \
+        -DWITH_PNG=ON \
+        -DWITH_PVAPI=OFF \
+        -DWITH_UNICAP=OFF \
+        -DWITH_GIGEAPI=OFF \
+        -DWITH_QT=OFF \
+        -DWITH_GTK=OFF \
+        -DWITH_TBB=OFF \
+        -DWITH_TIFF=ON \
+        -DWITH_V4L=OFF \
+        -DWITH_OPENCL=OFF \
+        -DBUILD_DOCS=OFF \
+        -DBUILD_TESTS=OFF \
+        -DBUILD_PERF_TESTS=OFF \
+        -DWITH_OPENCLAMDFFT=OFF \
+        -DWITH_OPENCLAMDBLAS=OFF \
+        -DBUILD_WITH_DEBUG_INFO=ON ..
+  - make
+  - sudo make install
+  - popd
+  - popd
+  - popd
 
 script:
   mvn clean install deploy
